--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
 </head>
 <body>
 <h1 align="center">Hi Nanna</h1>
-<a href="https://en.wikipedia.org/wiki/Hi_Nanna"><img height="200" width="150" src="../../assets/images/hi nanna.jpg"/></a>
+<a href="https://en.wikipedia.org/wiki/Hi_Nanna"><img height="200" width="150" src="./hi nanna.jpg"/></a>
 <h3>1.Samayamaa</h3>
 <audio controls loop autoplay>
-    <source src="../../assets/audios/audio1.mp3">
+    <source src="./audio1.mp3">
 </audio>
 <h3>2.Gajubomma</h3>
 <audio controls loop autoplay>
-    <source src="../../assets/audios/audio2.mp3">
+    <source src="./audio2.mp3">
 </audio>
 <h3>3.Ammadi</h3>
 <audio controls loop autoplay>
-    <source src="../../assets/audios/audio3.mp3">
+    <source src="./audio3.mp3">
 </audio>
 <br>
 <br>
